--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -4,7 +4,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    max-width: 800px;
     min-height: 100dvh;
     margin: 0 auto;
 
@@ -15,6 +14,7 @@
         font-size: 1rem;
         font-weight: 500;
         height: 40px;
+        padding-inline: 2rem;
     }
 
     .bookmarks {
@@ -22,33 +22,75 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
-        margin-top: 5rem;
+        gap: 2rem;
+        margin-top: 2rem;
+        padding: 2rem;
+
+        .info {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1rem;
+
+            .avatar {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                width: 34px;
+                height: 34px;
+                background-color: crimson;
+                margin-right: 1rem;
+
+                svg {
+                    fill: #f1f1f3;
+                    width: 17px;
+                    height: 17px;
+                }
+            }
+
+            svg {
+                width: 20px;
+                height: 20px;
+                fill: var(--muted);
+            }
+
+            .date {
+                color: var(--muted);
+            }
+        }
 
         .bookmark {
+            position: relative;
             display: flex;
             flex-direction: column;
-            border: solid 1px var(--muted);
 
-            h2 {
-                font-size: 1rem;
-                font-weight: 500;
-            }
+            .text {
+                padding: 2rem 0rem;
+                border-bottom: solid 1px rgba(0, 0, 0, 0.15);
 
-            a {
-                display: inline-block;
-                width: 100%;
-                border-bottom: solid 1px var(--muted);
-            }
-
-            .image {
-                flex: 1;
-
-                img {
-                    width: 100%;
-                    height: auto;
-                    object-fit: contain;
+                .title {
+                    font-size: 1rem;
+                    font-weight: 600;
+                    margin-bottom: 0.5rem;
                 }
+
+                a {
+                    display: inline-block;
+                    width: 100%;
+                }
+            }
+
+            img {
+                object-fit: contain;
+                border-radius: 6px;
+                box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.125);
+                width: 100%;
+                height: auto;
+            }
+
+            .placeholder {
+                flex: 1;
+                background-color: var(--background-color);
             }
         }
     }
